# pr-bro

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  VERSIONING.md  release-plz.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  pr-title.yml  release-plz.yml  release.yml
docs/: caching.md  configuration.md
homebrew/: pr-bro.rb.template  private_download_strategy.rb
src/: fetch.rs  lib.rs  main.rs  stderr_buffer.rs
src/browser/: mod.rs
src/config/: init.rs  mod.rs  schema.rs
src/credentials/: mod.rs  prompt.rs
src/github/: cache.rs  client.rs  mod.rs  search.rs  types.rs
src/output/: formatter.rs  mod.rs
src/scoring/: config.rs  engine.rs  factors.rs  mod.rs  validation.rs
src/snooze/: filter.rs  mod.rs  storage.rs  types.rs
src/tui/: app.rs  event.rs  mod.rs  theme.rs  ui.rs
src/version_check/: cache.rs  checker.rs  mod.rs
