[package]
name = "pr-bro"
version = "0.1.0"
edition = "2021"

[dependencies]
octocrab = "0.49"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
rustls = { version = "0.23", features = ["ring"] }
clap = { version = "4.5", features = ["derive"] }
keyring = { version = "3.6", features = ["apple-native", "windows-native", "sync-secret-service"] }
serde-saphyr = "0.0.16"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
dirs = "6.0"
tokio-retry = "0.3"
owo-colors = "4"
chrono = { version = "0.4", features = ["serde"] }
terminal_size = "0.4"
humantime = "2.3"
webbrowser = "1.0.6"
rpassword = "5"
serde_json = "1"
atomic-write-file = "0.2"
